--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "4.2.3"
   },
   "devDependencies": {
-    "gulp": "^5.0.0"
+    "gulp": "^5.0.0",
+    "gulp-append-prepend": "^1.0.9"
   }
 }
